@@ -1,3 +1,7 @@
+2009-08-09  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/ext/match-window.jl: move rename-window here, as it requires prompt but this either does not 
+	                                       load properly in windows.jl or breaks sawfish-ui if require'ed instead of open'ed
+
 2009-08-05  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/windows.jl: make rename-window work again
 
